--- a/Radio/Views/Author/Edit.cshtml
+++ b/Radio/Views/Author/Edit.cshtml
@@ -15,7 +15,7 @@
         @Html.HiddenFor(model => model.AuthorId)
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Name)
+           <h3> @Html.LabelFor(model => model.Name)</h3>
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Name)
@@ -23,31 +23,15 @@
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Password)
+           <h3>@Html.LabelFor(model => model.Password)</h3>
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Password)
+            @Html.PasswordFor(model => model.Password)
             @Html.ValidationMessageFor(model => model.Password)
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Email)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Email)
-            @Html.ValidationMessageFor(model => model.Email)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Title)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Title)
-            @Html.ValidationMessageFor(model => model.Title)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.GeneralInfo)
+           <h3>@Html.LabelFor(model => model.GeneralInfo)</h3> 
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.GeneralInfo)
@@ -55,13 +39,13 @@
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.LinkToSource)
+           <h3>@Html.LabelFor(model => model.LinkToSource)</h3> 
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.LinkToSource)
             @Html.ValidationMessageFor(model => model.LinkToSource)
         </div>
-        <h2>Wy don't you add a song?</h2>
+        <h3>Add a song?</h3>
         <p>
             <input type="file" name="file" id="files" style="cursor: pointer" />
         </p>
