--- a/Radio/Views/Shared/_Layout.cshtml
+++ b/Radio/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
                 </div>
                 <div class="float-right">
                     <section id="login">
-                        
+                        @Html.ActionLink("Login", "Login", "Author")
                     </section>
                     <nav>
                         
